profilelist1exp/unpackaged/objects/Deal_Registration__mdt.object
<CustomObject>
    <fields>
        <fullName>All_Lob__c</fullName>
        <label>All Lob</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_LOB__c</fullName>
        <label>Client LOB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Code__c</fullName>
        <label>Language Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_LOB__c</fullName>
        <label>Storage LOB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThreshHold_Currency__c</fullName>
        <label>ThreshHold Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Deal Registration</label>
    <listViews>
        <fullName>myView</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Currency__c</columns>
        <columns>Language_Code__c</columns>
        <columns>Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>myView</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Deal Registrations</pluralLabel>
</CustomObject>